# idlpp-cxx

./: CMakeLists.txt  README.md  azure-pipelines.yml  build.yml
idlpp/: CMakeLists.txt
idlpp/cmake/: IdlDdscxxGenerate.cmake  isocpp_idlpp.bat.in  isocpp_idlpp.in
idlpp/cmake/modules/: FindMaven.cmake  Packaging.cmake
idlpp/cmake/modules/Packaging/: PackageConfig.cmake.in  examples.xml
idlpp/cppgen/: CMakeLists.txt
idlpp/idlc/: CMakeLists.txt
idlpp/idlc/src/: Project.java.in  pom.xml.in
idlpp/idlpp/: CMakeLists.txt
idlpp/idlpp/src/: idl_base.c  idl_base.h
idlpp/idlpp/templates/: liteISOCxxClassBody  liteISOCxxClassSpecHeader  liteISOCxxMainInclude  liteIdlInterface  liteIdlInterfaceHeader
idlpp/idlpp/templates/C99/: HeaderHeader  SourceHeader
idlpp/ppresources/: CMakeLists.txt
idlpp/ppresources/ospli/src/abstraction/os/code/: os_atomics.c  os_cfg.c  os_cond.c  os_config.c  os_defs.c  os_diag.c  os_errno.c  os_heap.c  os_init.c  os_iterator.c  os_mutex.c  os_process.c  os_report.c  os_rwlock.c  os_semaphore.c  os_stdlib.c  os_string.c  os_thread.c  os_time.c  os_uri.c  os_utsname.c
idlpp/ppresources/ospli/src/abstraction/os/include/: os.h  os_EntryPoints.h  os_abstract.h  os_alloca.h  os_atomics.h  os_atomics_gcc.h  os_atomics_gcc_arm.h  os_atomics_gcc_ppc.h  os_atomics_gcc_sparc.h  os_atomics_gcc_x86.h  os_atomics_iar_arm.h  os_atomics_integrity.h  os_atomics_solaris.h  os_atomics_vxworks.h  os_atomics_win32.h  os_cfg.h  os_classbase.h  os_cond.h  os_config.h  os_decl_attributes.h  os_decl_attributes_sal.h  os_defs.h  os_diag.h  os_errno.h  os_formatspec_c99.h  os_formatspec_ilp32_i32lp64.h  os_formatspec_win32_win64.h  os_gitrev.h  os_heap.h  os_hosttarget.h  os_if.h  os_init.h  os_inline.h  os_iterator.h  os_iterator_type.h  os_log_cfg.h  os_macrostringify.h  os_mutex.h  os_process.h  os_report.h  (+11 more)
idlpp/ppresources/ospli/src/cpp/code/: accum.c  accum.h  at.c  autodef.c  copyof.c  cpp_io.h  cpp_malloc.h  debug.c  define.c  dump.c  error.c  eval.c  expand.c  expr.c  expr.h  if.c  if.h  include.c  include.h  io.c  is.c  is.h  line.c  pragma.c  predefs.c  preprocess.c  preprocess.h  set.c  sharp.c  stdincs.h  symtbl.c  symtbl.h  unctrl.c  unctrl.h  undef.c  while.c
idlpp/ppresources/ospli/src/cpp/include/: dds_cpp.h
idlpp/ppresources/ospli/src/database/database/code/: c__base.h  c__collection.h  c__field.h  c__metabase.h  c__mmbase.h  c__querybase.h  c__refcheck.h  c__scope.h  c_base.c  c_clone.c  c_collection.c  c_field.c  c_iterator.c  c_laptime.c  c_metabase.c  c_metafactory.c  c_misc.c  c_mmbase.c  c_querybase.c  c_scope.c  c_stringSupport.c  c_sync.c  c_time.c  c_typebase.c  q__parser.h  q_expr.c  q_parser.c  q_parser.y
idlpp/ppresources/ospli/src/database/database/include/: c_base.h  c_clone.h  c_collection.h  c_field.h  c_filter.h  c_iterator.h  c_laptime.h  c_list_tmpl.h  c_metabase.h  c_metafactory.h  c_misc.h  c_mmbase.h  c_module.h  c_querybase.h  c_stringSupport.h  c_sync.h  c_time.h  c_typebase.h  q_expr.h  q_helper.h  q_parser.h
idlpp/ppresources/ospli/src/database/serialization/code/: sd__byteswapping.h  sd__confidence.h  sd__contextItem.h  sd__deepwalkMeta.h  sd__printXMLTypeinfo.h  sd__resultCodes.h  sd__resultCodesXML.h  sd__resultCodesXMLMetadata.h  sd__serializer.h  sd__serializerXML.h  sd_cdr.c  sd_contextItem.c  sd_deepwalk.c  sd_deepwalk.h  sd_deepwalkMeta.c  sd_errorReport.c  sd_list.c  sd_misc.c  sd_misc.h  sd_randomizer.c  sd_serializer.c  sd_serializerBigE.c  sd_serializerXML.c  sd_serializerXMLMetadata.c  sd_serializerXMLTypeinfo.c  sd_string.c  sd_string.h  sd_stringsXML.c  sd_stringsXML.h  sd_typeInfoParser.c  sd_xmlNode.c  sd_xmlNode.h  sd_xmlParser.c  sd_xmlParser.h
idlpp/ppresources/ospli/src/database/serialization/include/: sd_cdr.h  sd_deepwalkMeta.h  sd_errorReport.h  sd_list.h  sd_randomizer.h  sd_serializer.h  sd_serializerBigE.h  sd_serializerXML.h  sd_serializerXMLMetadata.h  sd_serializerXMLTypeinfo.h  sd_typeInfoParser.h
idlpp/ppresources/ospli/src/tools/cppgen/code/: ast_boxed_value.cpp  ast_expression.cpp  ast_hdrs.cpp  ast_initializer.cpp  ast_opaque.cpp  ast_statemember.cpp  ast_value.cpp  ast_value_fwd.cpp  cppgen.cpp  drv_args.cpp  drv_main.cpp  drv_param.cpp  fe_cpp_keyword.c  fe_value_header.cpp  fe_value_inheritance_spec.cpp  lex_yy.cpp  nr_narrow.cpp  std.cpp  utl_pragmas.cpp  utl_stack.cpp  utl_string.cpp  utl_wstring.cpp  xbe_arglist.cpp  xbe_args.cpp  xbe_argument.cpp  xbe_argument2.cpp  xbe_array.cpp  xbe_attribute.cpp  xbe_classes.cpp  xbe_classgen.cpp  xbe_codegen.cpp  xbe_constant.cpp  xbe_cppfwd.cpp  xbe_cppname.cpp  xbe_cppscope.cpp  xbe_cpptype.cpp  xbe_direction.cpp  xbe_dispatchable.cpp  xbe_dispatcher.cpp  xbe_enum.cpp  (+33 more)
idlpp/ppresources/ospli/src/tools/cppgen/include/: Std.h  StdList.h  StdString.h  ast_boxed_value.h  ast_hdrs.h  ast_initializer.h  ast_state_member.h  ast_value.h  ast_value_fwd.h  bool.h  cppgen_counter.h  cppgen_fstream.h  cppgen_if.h  cppgen_iostream.h  cppgen_string.h  fe_value_header.h  fe_value_inheritance_spec.h  idl.h  prototc.h  tlist.h  utl_hash.h  utl_incl.h  utl_pragmas.h  xbe.h  xbe_arglist.h  xbe_argument.h  xbe_argument2.h  xbe_array.h  xbe_attribute.h  xbe_classes.h  xbe_classgen.h  xbe_codegen.h  xbe_constant.h  xbe_cppfwd.h  xbe_cppname.h  xbe_cppscope.h  xbe_cpptype.h  xbe_direction.h  xbe_dispatchable.h  xbe_dispatcher.h  (+32 more)
idlpp/ppresources/ospli/src/tools/idlpp/code/: idl__genSajMeta.h  idl_catsDef.c  idl_catsDef.h  idl_constSpecifier.c  idl_constSpecifier.h  idl_databaseValidation.c  idl_databaseValidation.h  idl_dependencies.c  idl_dependencies.h  idl_dll.c  idl_dll.h  idl_fileMap.c  idl_fileMap.h  idl_genCHelper.c  idl_genCHelper.h  idl_genCorbaCCopyin.c  idl_genCorbaCCopyin.h  idl_genCorbaCCopyout.c  idl_genCorbaCCopyout.h  idl_genCorbaCHelper.c  idl_genCorbaCHelper.h  (+134 more)
idlpp/ppresources/ospli/src/utilities/code/: ut__stack.h  ut_avl.c  ut_collection.c  ut_stack.c
idlpp/ppresources/ospli/src/utilities/include/: ut_avl.h  ut_collection.h  ut_result.h  ut_stack.h
idlpp/ppresources/vlite/include/cpp/: cpp_dcps_if.h  sacpp_dds_basic_types.h
(+154 files in other folders)
